--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Quicksand|Roboto&display=swap" rel="stylesheet">
 
-    <title>Hello, world!</title>
+    <title>DevBook - Bootstrap 4 Book/eBook Landing Page Template For Developers</title>
   </head>
   <body>
     <!-- Navbar-section-start -->
@@ -199,12 +199,12 @@
     <!-- Form-section start -->
     <div class="container d-flex justify-content-center" id="form-container">
       <div class="form-group">
-        <h3 class="text-center">Get A Free Preview</h3>
+        <h2 class="text-center">Get A Free Preview</h2>
         <label for="email" class="text-center">Sign up to get a free preview of the book.
           You can offer visitors free book previews to generate leads.</label>
         <div class="form-wrap form-inline justify-content-center flex-wrap">
           <input type="email" class="form-control d-flex" name="" id="email" aria-describedby="emailHelpId" placeholder="Your Email">
-          <a name="" id="" class="btn btn-primary" href="#" role="button">Send</a>
+          <a name="" id="form-button" class="btn btn-primary" href="#" role="button">Send</a>
         </div>
     </div>
     </div>
@@ -212,63 +212,65 @@
 
     <!-- Review-section start -->
     <div class="container">
-        <h2>Book Reviews</h2>
-        <p>See what our readers are saying.</p>
+        <h2 class="text-center">Book Reviews</h2>
+        <p class="text-center">See what our readers are saying.</p>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-lg-4">
             <div class="icon-holder"><i class="fas fa-quote-right    "></i></div>
-            <blockquote class="blockquote">
+            <blockquote class="blockquote blockquote-review">
                 <p class="mb-0">"Excellent Book! Add your book reviews here consectetur adipiscing elit. Aliquam euismod nunc porta urna facilisis tempor. Praesent mauris neque, viverra quis erat vitae, auctor imperdiet nisi."</p>
-                <footer class="blockquote-footer"><img src="asset/img/profiles/profile-1.png"> Doe<cite title="Source Title">Co-Founder, Startup Week</cite></footer>
+                <footer class="blockquote-footer"><img class="review-img" src="asset/img/profiles/profile-1.png"> Doe<cite title="Source Title">Co-Founder, Startup Week</cite></footer>
             </blockquote>
         </div>
         <div class="col-lg-4">
             <div class="icon-holder"><i class="fas fa-quote-right    "></i></div>
-            <blockquote class="blockquote">
+            <blockquote class="blockquote blockquote-review">
                 <p class="mb-0">"Excellent Book! Add your book reviews here consectetur adipiscing elit. Aliquam euismod nunc porta urna facilisis tempor. Praesent mauris neque, viverra quis erat vitae, auctor imperdiet nisi."</p>
-                <footer class="blockquote-footer"><img src="asset/img/profiles/profile-2.png"> Doe<cite title="Source Title">Co-Founder, Startup Week</cite></footer>
+                <footer class="blockquote-footer"><img class="review-img" src="asset/img/profiles/profile-2.png"> Doe<cite title="Source Title">Co-Founder, Startup Week</cite></footer>
             </blockquote>
         </div>
         <div class="col-lg-4">
             <div class="icon-holder"><i class="fas fa-quote-right    "></i></div>
-            <blockquote class="blockquote">
+            <blockquote class="blockquote blockquote-review">
                 <p class="mb-0">"Excellent Book! Add your book reviews here consectetur adipiscing elit. Aliquam euismod nunc porta urna facilisis tempor. Praesent mauris neque, viverra quis erat vitae, auctor imperdiet nisi."</p>
-                <footer class="blockquote-footer"><img src="asset/img/profiles/profile-3.png"> Doe<cite title="Source Title">Co-Founder, Startup Week</cite></footer>
+                <footer class="blockquote-footer"><img class="review-img" src="asset/img/profiles/profile-3.png"> Doe<cite title="Source Title">Co-Founder, Startup Week</cite></footer>
             </blockquote>
         </div>
     </div>
-    <div class="row">
-        <div class="col-lg-6">
+    <div class="row d-flex justify-content-center">
+        <div class="col-lg-4">
             <div class="icon-holder"><i class="fas fa-quote-right    "></i></div>
-            <blockquote class="blockquote">
+            <blockquote class="blockquote blockquote-review">
                 <p class="mb-0">"Excellent Book! Add your book reviews here consectetur adipiscing elit. Aliquam euismod nunc porta urna facilisis tempor. Praesent mauris neque, viverra quis erat vitae, auctor imperdiet nisi."</p>
-                <footer class="blockquote-footer"><img src="asset/img/profiles/profile-4.png"> Doe<cite title="Source Title">Co-Founder, Startup Week</cite></footer>
+                <footer class="blockquote-footer"><img class="review-img" src="asset/img/profiles/profile-4.png"> Doe<cite title="Source Title">Co-Founder, Startup Week</cite></footer>
             </blockquote>            
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-4">
             <div class="icon-holder"><i class="fas fa-quote-right    "></i></div>
-            <blockquote class="blockquote">
+            <blockquote class="blockquote blockquote-review">
                 <p class="mb-0">"Excellent Book! Add your book reviews here consectetur adipiscing elit. Aliquam euismod nunc porta urna facilisis tempor. Praesent mauris neque, viverra quis erat vitae, auctor imperdiet nisi."</p>
-                <footer class="blockquote-footer"><img src="asset/img/profiles/profile-5.png"> Doe<cite title="Source Title">Co-Founder, Startup Week</cite></footer>
+                <footer class="blockquote-footer"><img class="review-img" src="asset/img/profiles/profile-5.png"> Doe<cite title="Source Title">Co-Founder, Startup Week</cite></footer>
             </blockquote>            
         </div>
     </div>
-    <div class="container">
-        <a name="" id="" class="btn btn-primary" href="#" role="button">Get Your Copy Today</a>
+    <div class="container d-flex justify-content-center">
+        <a name="" id="review-button" class="btn btn-primary" href="#" role="button">Get Your Copy Today</a>
     </div>
     </div>
     <!-- End Review -->
 
     <!-- Author-section start -->
-    <div class="cotainer">
-        <img src="asset/img/profiles/author-profile.png" alt="">
-        <h2>About The Author</h2>
-        <p>This book landing page template is made by product designer Xiaoying Riley for developers. You can use this template to self-publish and promote your book/ebook. You can easily use platforms such as <a href="#">Gumroad</a> to handle your book payment and delivery.</p>
-        <p>This template is 100% FREE as long as you <strong>keep the footer attribution link</strong>. You do not have the rights to resell, sublicense or redistribute (even for free) the template on its own or as a separate attachment from any of your work. If you’d like to use this template without the footer attribution link, you can buy the commercial license.</p>
-        <h3>Follow Author</h3>
+    <div class="container text-center mw-100 py-5" id="author-container">
+        <img src="asset/img/profiles/author-profile.png" alt="author image">
+        <h2 id="follow-heading">About The Author</h2>
+        <div class="author-word">
+          <p>This book landing page template is made by product designer Xiaoying Riley for developers. You can use this template to self-publish and promote your book/ebook. You can easily use platforms such as <a class="author-link-span" href="#">Gumroad</a> to handle your book payment and delivery.</p>
+          <p>This template is 100% FREE as long as you <strong>keep the footer attribution link</strong>. You do not have the rights to resell, sublicense or redistribute (even for free) the template on its own or as a separate attachment from any of your work. If you’d like to use this template without the footer attribution link, you can buy the <a class="author-link-span" href="">commercial license</a>.</p>
+        </div>
         <div class="icon-follow">
+          <h3 id="follow-text">Follow Author</h3>
             <i class="fab fa-twitter" aria-hidden="true"></i>
             <i class="fab fa-github" aria-hidden="true"></i>
             <i class="fab fa-medium" aria-hidden="true"></i>
@@ -278,7 +280,9 @@
     <!-- End Author -->
 
     <!-- Footer start -->
-    <p>Redesigned with <i class="fa fa-heart" aria-hidden="true"></i>by <a href="https://www.facebook.com/hoangtiendasilva">Hoàng Thành Tiến</a> for learning purposes.</p>
+    <footer class="py-5 text-center">
+      <p>Redesigned with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://www.facebook.com/hoangtiendasilva">Hoàng Thành Tiến</a> for learning purposes. <a href="https://demos.onepagelove.com/html/devbook/">Link to the origin demos</a></p>
+    </footer>
     <!-- End Footer -->
 
     <!-- Optional JavaScript -->
